<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">咔嚓</string>
    <!-- 首页的底部按钮 -->
    <string name="action_settings">Settings</string>
    <string name="discovery">发现</string>
    <string name="my_kcd">我的</string>
    <string name="kcd">咔嚓</string>
    <string name="category">分类</string>
    <string name="shopping_cart">购物车</string>
     <!-- 定制详情 -->
    <string name="customize_detail">定制详情</string>
    <string name="product_des">商品描述</string>
    <string name="pre_consult">售前咨询</string>
    <string name="evaluation">商品评价</string>
    <string name="producer">生产厂商</string>
    <!-- 我的kcd -->
    <string name="my_orders">我的订单</string>
    <string name="total_orders">查看所有订单</string>
    <string name="my_pictures">我的图片</string>
    <string name="message_2_me">a我的</string>
    <string name="message_2_other">我a的</string>
    <!-- 帐号 -->
    <string name="reset_password">找回密码</string>
    <string name="registered_num">输入注册时的手机号</string>
    <string name="must_input">*</string>
    <string name="gain_identifying_code">获取验证码</string>
    <string name="input_identifying_code">输入验证码</string>
    <string name="input_identifying_code_hint">请输入验证码</string>
    <string name="next_step">下一步</string>
    <!-- 用户资料 -->
    <string name="my_info">我的资料</string>
    <string name="account_icon">头像</string>
    <string name="sex">性别</string>
    <string name="female">女</string>
    <string name="nickname">昵称</string>
    <string name="kcd_currency">咔嚓币</string>
    <string name="person_brief_info">个人简介</string>
    <string name="person_brief_info_default">额，这里介绍有人看吗？</string>

   
    <!-- 登录 -->
    <string name="login">登录</string>
    <string name="login_phone_num">手机号码:</string>
    <string name="password">密码:</string>
    <string name="login_auto">自动登录</string>
    <string name="login_immediately">立即登录</string>
    <!-- 注册 -->
    <string name="register">注册</string>
    <string name="input_phone_num">输入手机号码</string>
    <!-- 地址管理 -->
    <string name="address_manager">地址管理</string>
    <string name="address">北京市海淀区丹棱街5号微软大厦</string>

    <!-- 收货地址 -->
    <string name="new_address">新建地址</string>
    <string name="get_frome_contracts">从手机通讯录里选择</string>
    <string name="receive_name">收货人姓名</string>
    <string name="input_receiver_name_hint">请输入收货人姓名</string>
    <string name="phone_num">手机号码</string>
    <string name="input_phone_num_hint">请输入手机号码</string>
    <string name="receive_address">收货地址</string>
    <string name="confirm_finish">确认完成</string>
    <string name="input_detail_address_hint">请输入详细地址</string>
    <!-- 我的收货人 -->
    <string name="my_recevier">我的收货人</string>
    <string name="set_default_address">设为默认</string>
    <string name="del">删除</string>
    <!-- 咔嚓页面的底部按钮 -->
    <string name="send_message">a ta</string>
    <string name="share">分享</string>
    <string name="add">加入购物车</string>
    <string name="buy">快速购买</string>
    <!-- 搜索 -->
    <string name="search_hint">搜索搜索</string>
    <string name="cancel">取消</string>
    <string name="history">搜索历史 </string>
    <string name="clean"> 清空历史记录</string>
    <string name="search_top">今日热搜榜 </string>
    <string name="search_histrory_text1">T恤</string>
    <string name="search_histrory_text2">拼图</string>
    <string name="search_histrory_text3">手机配件</string>
    <string name="search_histrory_text4">毕业旅行</string>
    <string name="search_histrory_text5">Iphone</string>
    <string name="search_histrory_text6">Mac配件</string>
    <!-- 公用 -->
    <string name="err_request_timeout">请求超时，请稍后重试</string>
    <string name="err_server_error">服务异常，请稍后重试</string>
    <string name="err_no_internet">无法连接到网络</string>
    <string name="err_wifi_internet">不能在2g/3g/4g下更新</string>
    <!-- 模板编辑 -->
    <string name="image_select_hint">当前模板只能选择1-5张照片</string>
    <string name="image_select_ok">确定(5/5)</string>
    <string name="album">相册</string>
    <string name="edit">编辑</string>
    <string name="camera">相机</string>
    <!-- 谁买过 -->
    <string name="who_buy">买过的人</string>
    <!-- 收银台 -->
    <string name="cashier">收银台</string>
    <string name="pay">请支付</string>
    <string name="can_used_currency">可用咔嚓币0.2</string>
    <string name="wechat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <!-- @联系人 -->
    <string name="sync">同步过去</string>
    <string name="group_choice">分组选择</string>
    <string name="contacts_choice">通讯录选择</string>
    <string name="recevie_choice">收货人选择</string>
    <!-- 分享 -->
    <string name="wechat">微信</string>
    <string name="share_friends">朋友圈</string>
    <string name="copy">复制</string>
    <string name="message">短信</string>
    <string name="share_currency">分享赚币</string>
    <!--  -->
    <string name="account_name">aywawa</string>
    <string name="account_phone_num">131212343434</string>
    <string name="address_default">默认</string>
    <string name="original_brocast">原创广播</string>
    <string name="time">12:44</string>
    <string name="sold">已售118件</string>
    <string name="product_name">镂空T恤</string>
    <string name="product_price">￥124.00</string>

</resources>