<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:title="http://schemas.android.com/apk/res-auto"
    xmlns:brief="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity" >

    <com.kachade.view.PageTiltleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        title:MidText="@string/my_info"
        title:RightVis="false" />

    <View
        android:id="@+id/history_lay_gap"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/division_height" />

    <com.kachade.view.BriefHorizontalItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        brief:BH_LeftText="@string/account_icon"
        brief:BH_MidIconSrc="@drawable/albums"
        brief:BH_MidIconVis="true"
        brief:BH_MidTextVis="false"
        brief:BH_RightIconVis="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color" />

    <com.kachade.view.BriefHorizontalItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        brief:BH_LeftText="@string/sex"
        brief:BH_MidText="@string/female"
        brief:BH_MidTextColor="@color/font_black"
        brief:BH_MidTextVis="true"
        brief:BH_RightIconVis="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color" />

    <com.kachade.view.BriefHorizontalItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        brief:BH_LeftText="@string/nickname"
        brief:BH_MidIconVis="false"
        brief:BH_MidText="@string/account_name"
        brief:BH_MidTextColor="@color/font_black"
        brief:BH_MidTextVis="true"
        brief:BH_RightIconVis="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color" />

    <com.kachade.view.BriefHorizontalItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        brief:BH_LeftText="@string/kcd_currency"
        brief:BH_MidIconVis="false"
        brief:BH_MidText="@string/product_price"
        brief:BH_MidTextColor="@color/font_black"
        brief:BH_MidTextVis="true"
        brief:BH_RightIconVis="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/line_height"
        android:background="@color/line_color" />

    <com.kachade.view.BriefHorizontalItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        brief:BH_LeftText="@string/person_brief_info"
        brief:BH_MidIconVis="false"
        brief:BH_MidText="@string/person_brief_info_default"
        brief:BH_MidTextColor="@color/font_lightgray"
        brief:BH_MidTextVis="true"
        brief:BH_RightIconVis="true" />

</LinearLayout>