<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity" >

    <com.kachade.view.PageTiltleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        title:MidText="@string/reset_password"
        title:RightVis="false" />

    <View
        android:id="@+id/history_lay_gap"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/division_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_margin_left"
        android:paddingRight="@dimen/page_margin_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginTop="@dimen/page_margin_top"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registered_num"
                android:textColor="@color/font_black"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/must_input"
                android:textColor="@color/font_red"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom" >

            <EditText
                android:id="@+id/num_ed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/item_margin_right"
                android:layout_toLeftOf="@+id/btn_gain"
                android:background="@drawable/input_rectangle_bg"
                android:hint="@string/input_phone_num_hint"
                android:textSize="@dimen/reset_password_text_size" >
            </EditText>

            <TextView
                android:id="@+id/btn_gain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/button_blue_bg"
                android:text="@string/gain_identifying_code"
                android:textColor="@color/font_white"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/input_identifying_code"
                android:textColor="@color/font_black"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/must_input"
                android:textColor="@color/font_red"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>
        </LinearLayout>

        <EditText
            android:id="@+id/identify_ed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@drawable/input_rectangle_bg"
            android:hint="@string/input_identifying_code_hint"
            android:textSize="@dimen/reset_password_text_size" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_next"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin_left"
        android:layout_marginRight="@dimen/page_margin_right"
        android:layout_marginTop="@dimen/page_margin_top"
        android:background="@drawable/button_blue_bg"
        android:gravity="center"
        android:text="@string/next_step"
        android:textColor="@color/font_white"
        android:textSize="@dimen/reset_password_text_size" >
    </TextView>

</LinearLayout>