<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mykcd="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity.kcd" >

    <RelativeLayout
        android:id="@+id/account_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:paddingBottom="@dimen/page_margin_bottom"
        android:paddingLeft="@dimen/page_margin_left"
        android:paddingRight="@dimen/page_margin_right"
        android:paddingTop="@dimen/page_margin_top" >

        <com.kachade.view.CircleImageView
            android:id="@+id/account_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/item_margin_right"
            android:src="@drawable/albums" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/item_margin_left"
            android:layout_toRightOf="@+id/account_icon" >

            <TextView
                android:id="@+id/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_name"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_lar" />

            <TextView
                android:id="@+id/account_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_name"
                android:text="@string/female"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_mid" />

            <TextView
                android:id="@+id/kcd_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_name"
                android:layout_marginLeft="@dimen/item_margin_left"
                android:layout_toRightOf="@+id/account_sex"
                android:text="@string/kcd_currency"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_mid" />

            <TextView
                android:id="@+id/colon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_name"
                android:layout_marginLeft="@dimen/item_margin_left"
                android:layout_toRightOf="@+id/kcd_currency"
                android:text=":"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_mid" />

            <TextView
                android:id="@+id/account_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/account_name"
                android:layout_marginLeft="@dimen/item_margin_left"
                android:layout_toRightOf="@+id/colon"
                android:text="145"
                android:textColor="@color/font_black"
                android:textSize="@dimen/font_mid" />

            <TextView
                android:id="@+id/sys_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/account_sex"
                android:text="大家一起来赚咔嚓币吧！"
                android:textColor="@color/font_lightgray"
                android:textSize="@dimen/font_mid" />
        </RelativeLayout>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/btn_right" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/division_height"
        android:background="@color/white"
        android:orientation="vertical" >

        <com.kachade.view.MyKcdItemView
            android:id="@+id/my_orders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            mykcd:MK_LeftText="@string/my_orders"
            mykcd:MK_RightText="@string/total_orders"
            mykcd:MK_RightTextColor="@color/font_gray"
            mykcd:MK_RightTextVis="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line_width"
            android:background="@color/line_color" />
    </LinearLayout>

    <com.kachade.view.MyKcdItemView
        android:id="@+id/my_pictures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/division_height"
        mykcd:MK_LeftText="@string/my_pictures"
        mykcd:MK_RightTextVis="false" />

    <com.kachade.view.MyKcdItemView
        android:id="@+id/m2m"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/division_height"
        mykcd:MK_LeftText="@string/message_2_me"
        mykcd:MK_RightText="3"
        mykcd:MK_RightTextColor="@color/font_lightgray"
        mykcd:MK_RightTextVis="true" />

    <com.kachade.view.MyKcdItemView
        android:id="@+id/m2o"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/division_height"
        mykcd:MK_LeftText="@string/message_2_other"
        mykcd:MK_RightTextVis="false" />

    <com.kachade.view.MyKcdItemView
        android:id="@+id/my_receiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/division_height"
        mykcd:MK_LeftText="@string/my_recevier"
        mykcd:MK_RightTextVis="false" />

</LinearLayout>