<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:title="http://schemas.android.com/apk/res-auto"
    xmlns:brief="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity" >

    <com.kachade.view.PageTiltleView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        title:MidText="@string/new_address"
        title:RightVis="false" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/division_height" />

    <com.kachade.view.BriefHorizontalItemView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        brief:BH_LeftText="@string/get_frome_contracts"
        brief:BH_MidIconVis="false"
        brief:BH_MidTextVis="false"
        brief:BH_RightIconVis="true" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/division_height" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/page_margin_left"
        android:paddingRight="@dimen/page_margin_right" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginTop="@dimen/page_margin_top"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_name"
                android:textColor="@color/font_black"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/must_input"
                android:textColor="@color/font_red"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>
        </LinearLayout>

        <EditText
            android:id="@+id/name_ed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@drawable/input_rectangle_bg"
            android:hint="@string/input_receiver_name_hint"
            android:textSize="@dimen/reset_password_text_size" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginTop="@dimen/page_margin_top"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_num"
                android:textColor="@color/font_black"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/must_input"
                android:textColor="@color/font_red"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>
        </LinearLayout>

        <EditText
            android:id="@+id/num_ed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@drawable/input_rectangle_bg"
            android:hint="@string/input_phone_num_hint"
            android:textSize="@dimen/reset_password_text_size" >
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginTop="@dimen/page_margin_top"
            android:background="@color/white"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_address"
                android:textColor="@color/font_black"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/must_input"
                android:textColor="@color/font_red"
                android:textSize="@dimen/reset_password_text_size" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginTop="@dimen/page_margin_top"
            android:background="@color/white"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/spinnerProvince"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" >
            </Spinner>

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2" >
            </Spinner>
        </LinearLayout>

        <EditText
            android:id="@+id/detail_address_ed"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_margin_bottom"
            android:layout_marginRight="@dimen/item_margin_right"
            android:background="@drawable/input_rectangle_bg"
            android:hint="@string/input_detail_address_hint"
            android:textSize="@dimen/reset_password_text_size" >
        </EditText>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_done"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/page_margin_left"
        android:layout_marginRight="@dimen/page_margin_right"
        android:layout_marginTop="@dimen/page_margin_top"
        android:background="@drawable/button_blue_bg"
        android:gravity="center"
        android:text="@string/confirm_finish"
        android:textColor="@color/font_white"
        android:textSize="@dimen/reset_password_text_size" >
    </TextView>

</LinearLayout>