<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:background="@color/white"
    android:paddingLeft="@dimen/page_margin_left"
    android:paddingRight="@dimen/page_margin_right"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/product_tv"
        style="@style/discovery_item_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/page_margin_top"
        android:text="@string/product_name"
        android:textColor="@color/font_black" />

    <TextView
        android:id="@+id/product_price_tv"
        style="@style/discovery_item_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/page_margin_bottom"
        android:text="@string/product_price"
        android:textColor="@color/font_red" />

    <Button
        android:id="@+id/btn_buy"
        style="@style/discovery_item_text_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:background="@drawable/button_big_red_bg"
        android:text="@string/buy"
        android:textColor="@color/font_white" />

</RelativeLayout>